--- a/src/main/resources/public/error.html
+++ b/src/main/resources/public/error.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Fraud Checker Service - Something went wrong</title>
-  <link rel="stylesheet" type="text/css" href="js/lib/bootstrap/dist/css/bootstrap.min.css" />
-  <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="js/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
-  <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <title>Fraud Checker Service - Something went wrong</title>
+    <link href="js/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <script src="js/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="js/lib/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
+    <link href="stylesheets/main.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 <div class="jumbotron text-center">
-  <div class="container">
-    <h1>Fraud Checker Service - Something went wrong! </h1>
-    <hr />
-    <a type="button" class="btn btn-lg btn-primary" href="/"><span class="glyphicon glyphicon-home"></span> Go Home</a>
-  </div>
+    <div class="container">
+        <h1>Fraud Checker Service - Something went wrong! </h1>
+        <hr/>
+        <a class="btn btn-lg btn-primary" href="/" type="button"><span class="glyphicon glyphicon-home"></span> Go Home</a>
+    </div>
 </div>
 </body>
 </html>
