Setting the context path of application and also fixing index page to work with relative links after setting context path

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>Fraud Checker Service</h1>
         <hr/>
-        <a class="btn btn-lg btn-primary" href="/ping" type="button"><span class="glyphicon glyphicon-stats"></span>
+        <a class="btn btn-lg btn-primary" href="ping" type="button"><span class="glyphicon glyphicon-stats"></span>
             Ping</a>
     </div>
 </div>
